Campaign - Move Delete, Cancel buttons to right, fix spacing, formatting #8885

--- a/public/less/indi-email-builder/indi-email-campaign.less
+++ b/public/less/indi-email-builder/indi-email-campaign.less
@@ -27,5 +27,13 @@
             margin-left: -10px;
         }
     }
-
+    .campaign-btn-wide{
+        max-width: 100px;
+        margin-bottom: 5px;
+        @media screen and (max-width: 940px) {
+            span{
+                display: none;
+            }
+        }
+    }
 }
